<resources>
    <string name="app_name">Personal Health Monitor</string>
    <string name="callDoctor">Chiama medico di base</string>
    <string name="info">Informazioni Generali</string>
    <string name="temperature">Temperatura Corporea</string>
    <string name="pressure">Pressione</string>
    <string name="blood">Valori Del Sangue</string>
    <string name="glycemicIndex">Indice Glicemico</string>
    <string name="pains">Dolori</string>
    <string name="drug">Medicine</string>
    <string name="physicalActivity">Attività Fisica</string>
    <string name="saveButton">Salva</string>
    <string name="attention">Grado di attenzione con cui inserire i dati:</string>
    <string name="welcome">Benvenuto</string>
    <string name="settings">Impostazioni</string>
    <string name="doActivity">E sempre un buon momento per fare attività fisica!</string>
    <string name="introCallDoctor">Premi il telefono per chiamare il tuo dottore!</string>
    <string name="descriptionCallDoctor">Per qualsiasi dubbio o valore sballato non esitare a contattare uno specialista, il dottore come me e qui per aiutarti</string>
    <string name="introOtherPains">Dimmi qui se hai avuto altri dolori...</string>
    <string name="other">Altro...</string>
    <string name="headPains">Mal di testa</string>
    <string name="neckPains">Torcicollo</string>
    <string name="backPains">Mal di schiena</string>
    <string name="artsPains">Dolori agli arti</string>
    <string name="eyesPains">Male agli occhi</string>
    <string name="bellyPains">Mal di pancia</string>
    <string name="activity">Qualche suggerimento, buon allenamento!</string>
    <string name="introPhysicalActivity">E importante fare attività fisica per mantenere un corpo sano e in salute. Prendi pure spunto da qui, un po di fatica ma poi ti sentirai meglio!</string>
    <string name="titleDialog">Ricorda che...</string>
    <string name="welcomeIntro">Sono il tuo assistente per il controllo della salute... Iniziamo!</string>
    <string name="welcomeName">Come posso chiamarti?</string>
    <string name="welcomeAge">Quanti anni hai?</string>
    <string name="welcomePhone">Potresti fornirmi il numero di telefono del nostro dottore?</string>
    <string name="notInsert">Non inserito</string>
    <string name="hourInsert">Orario Inserimento</string>
    <string name="chart">Clicca per visualizzare l"'"andamento degli ultimi giorni: </string>
    <string name="introPains">Seleziona dalla seguente lista quello che ti ha infastidito:</string>
    <string name="introSectionPhysicalActivity">Seleziona dalla seguente lista le attività praticate: </string>
    <string name="deleteButton">Elimina</string>
    <string name="pieChart">Clicca per scoprire cosa ti tormenta piu spesso: </string>
    <string name="pieChartSport">Clicca per vedere in cosa ti alleni piu spesso: </string>
    <string name="corpoLibero">Corpo libero</string>
    <string name="corsa">Corsa</string>
    <string name="pesi">Pesi</string>
    <string name="camminata">Camminata</string>
    <string name="sportContatto">Sport di contatto</string>
    <string name="yoga">Yoga</string>
    <string name="time">Quanto tempo in totale?</string>
    <string name="introVirus">Aggiungi un promemoria alla sezione notifiche (es. compra mascherine, data vaccino, chiama medico…)</string>
    <string name="virus">Ricorda poche e semplici cose in questo periodo difficile:</string>
    <string name="virus1">Indossa sempre la mascherina</string>
    <string name="virus2">Lavati spesso le mani</string>
    <string name="virus3">Se hai febbre, male alle ossa o altri sintomi per diversi giorni, non esitare a contattare il medico di base</string>
    <string name="chartInfo">Clicca per vedere i progressi sul tuo peso corporeo!</string>
    <string name="chartBlood1">Clicca per visualizzare i dati relativi alla pressione: </string>
    <string name="chartBlood2">Clicca per visualizzare i dati relativi a indice glicemico: </string>
    <string name="monitoringPressure">Pressione alta: </string>
    <string name="monitoringTemperature">Febbre: </string>
    <string name="monitoringPains">Dolori compatibili col covid: </string>
    <string name="settingsIntro">Cosa teniamo monitorato?</string>
    <string name="receiveNotification">Vuoi ricevere una notifica?</string>
    <string name="memo">Promemoria</string>
    <string name="next">Avanti</string>
    <string name="set">Imposta</string>
    <string name="hourDailyNotification">Imposta orario notifica giornaliera:</string>
    <string name="returnApp">Quando ti devo ricordare di tornare?</string>
    <string name="drugToday">Hai preso delle medicine oggi? Quali?</string>

</resources>
