<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/ghostwhite"
    >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/ghostwhite"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingTop="30dp"
            >

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/virus_animation"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:padding="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/virus"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="19sp"
                    android:textColor="@color/rippelColor"
                    android:background="@drawable/back_data_section"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="10dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/virus1"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="19sp"
                        android:textColor="@color/textColor"
                        android:layout_weight="1"
                        />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/mask" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="10dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/virus2"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="19sp"
                        android:textColor="@color/textColor"
                        android:layout_weight="1"
                        />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/hands"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="10dp"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/virus3"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="19sp"
                        android:textColor="@color/textColor"
                        android:layout_weight="1"
                        />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/virus"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/introVirus"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/redChart"
                    />

                <EditText
                    android:id="@+id/virusEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Scrivi qui..."
                    android:textColor="@color/textColor"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="12dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/receiveNotification"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="5dp"
                        android:textSize="19sp"
                        android:textColor="@color/textColor"
                        android:gravity="center"
                        />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/virusSwitch"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        />

                </LinearLayout>

                <TimePicker
                    android:id="@+id/timePickerVirus"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    android:layout_gravity="center"

                    android:visibility="gone"
                    />

                <Button
                    android:id="@+id/virusButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/memo"
                    android:layout_marginLeft="80dp"
                    android:layout_marginRight="80dp"
                    android:textColor="@color/cardview_light_background"
                    android:layout_alignParentBottom="true"
                    android:backgroundTint="@color/button"
                    android:layout_marginTop="15dp"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>